--- a/index.html
+++ b/index.html
@@ -1469,7 +1469,7 @@ var x = setInterval(function() {
                          <li class="list-inline-item wow fadeIn" data-wow-delay="0.4s"><i class="fab fa-whatsapp fa-3x icon text-success" aria-hidden="true"></i></li> </a>
                            <li class=" wow fadeIn" data-wow-delay="0.4s">
                               <audio controls autoplay> 
-                                 <source src="Shaadi.mp3" type="audio/mpeg">
+                                 <source src="shaadi.mp3" type="audio/mpeg">
                                   </audio>
 </li>
                            </ul>
