--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <link href="css/fonts.css" rel="stylesheet" type="text/css" media="all" />
       <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
       <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+      <link src="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Amita:wght@700&family=Eczar:wght@500&family=Gotu&family=Kalam:wght@700&family=Laila:wght@500&family=Modak&family=Rozha+One&display=swap" rel="stylesheet">
    </head>
    <body>
@@ -1460,18 +1461,18 @@ var x = setInterval(function() {
 
          <center><h5 class="text-center"><span>नोट:- बारात मेरे निवास स्थान खानपुर पकरी से निजी वाहन द्वारा संध्या 04 बजे से आर्मी विवाह भवन दानापुर कैंट पटना के लिए प्रस्थान करेगी |</h5>
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57559.403680875876!2d85.01606724521785!3d25.62276357700431!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39ed554f4e117ba7%3A0x4fe68e9cfe6b542d!2sBanquet%20Halls%20in%20Danapur!5e0!3m2!1sen!2sin!4v1623599214592!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3597.172123291635!2d85.03587061501831!3d25.632412283695576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39ed574cf872b38d%3A0x484b14413375961f!2sSainik%20rest%20house!5e0!3m2!1sen!2sin!4v1623603715942!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
    <!-- End Contact -->
-   <div class="row justify-content-center">
+   <div style="margin-top: -1%" class="row justify-content-center bg-light">
                 <div class="col col-sm-12">
                     <div class="social">
                         <ul class="list-inline text-center">
-                           <p class="pfont text-danger">इस कार्ड को शेयर करें</h3> <a class="footerbtn" href="whatsapp://send?text= _स्नेह गगन में दीप जले जले , आशा का अरुणोदय हो।_ 
+                           <h3 class="pfont text-danger">इस कार्ड को शेयर करें</h3> <a class="footerbtn" href="whatsapp://send?text= _स्नेह गगन में दीप जले जले , आशा का अरुणोदय हो।_ 
                               _मिलन आज हो तरुण ह्रदय का , जीवन मधुरमय मंगल हो।।_
                               *चि० विकास* एवं  *आयु० सुप्रिया* के पावन परिणोत्सव की मधुर बेला में आपकी स्नेहमयी उपस्थिति एवं वर वधु के भावी जीवन को मंगलकामना हेतु
-आशीर्वचनों की कामना के साथ आप सदर आमंत्रित हैं - इस ब्लू लाइन पर क्लिक करें और निमत्रण पत्र देखे - https://khabaitech.github.io/d" data-action="share/whatsapp/share">
-                         <li class="list-inline-item wow fadeIn" data-wow-delay="0.4s"><i class="fab fa-whatsapp fa-3x icon text-success" aria-hidden="true"></i></li> </a>
+आशीर्वचनों की कामना के साथ आप सदर आमंत्रित हैं - इस ब्लू लाइन पर क्लिक करें और निमत्रण पत्र देखे - https://developerkhushi.github.io/Vikas_Weds_Supriya/" data-action="share/whatsapp/share">
+                         <li class="list-inline-item wow fadeIn" data-wow-delay="0.4s"><img src="https://1.bp.blogspot.com/-ttg1Y83O430/YMY8ftdNwmI/AAAAAAAAAoY/_8YjL4dY-Mo8uZvTakEl3VjvBfFh5d5ZwCLcBGAsYHQ/w200-h200/whatsapp.png" height="40px" width="40px"></li> </a>
                            <li class=" wow fadeIn" data-wow-delay="0.4s">
                               <audio controls autoplay> 
                                  <source src="shaadi.mp3" type="audio/mpeg">
