--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                <div class="row min-vh-80 align-items-center z-index-2 position-relative text-center">
                   <div class="col-12">
                      <h1 class="display-2 text-white mb-4 font-weight-600" style="font-family: 'Great Vibes', cursive;">Vikas &amp; Supriya</h1>
-                     <p class="font-weight-300 text-light lead mb-5 ">Sunday 20 June 2021 - Army Vivaah Bhawan, Danapur Cantt </p>
+                     <p class="font-weight-500 text-warning lead mb-5 ">Sunday 20 June 2021 <br>-Army Vivaah Bhawan, Danapur Cantt <br> Patna</p>
                      <!--<a href="#rsvp" class="btn btn-primary btn-wide-sm btn-sm  scroll">RSVP</a>-->
                   </div>
                </div>
@@ -131,7 +131,7 @@
                      </div>
                      <div class=" mt-4">
                           <h2 class="mb-0 text-danger">चि० ई० विकास कुमार सिंह</h2>
-                           <span class="text-success">सुपौत्र: श्रीमती बेचनी देवी एवं स्व० संत बिलास सिंह (शिक्षक)<br>सुपुत्र- श्रीमती नेहा सिंह एवं श्रीमनोज कुमार सिंह</span><br>
+                           <span class="text-success">सुपौत्र: श्रीमती बेचनी देवी एवं स्व० संत बिलास सिंह (शिक्षक)<br>सुपुत्र- श्रीमती रूपा देवी (शिक्षका) एवं श्री अवधेश सिंह</span><br>
                            <span class="small">ग्राम+पो०:- खानपुर पकरी, थाना: बिदुपुर (वैशाली)</span>
 
                         </div>
