--- a/index.html
+++ b/index.html
@@ -1459,7 +1459,7 @@ var x = setInterval(function() {
          </section>
          <!--End hero section-->
 
-         <center><h5 class="text-center"><span>नोट:- बारात मेरे निवास स्थान खानपुर पकरी से निजी वाहन द्वारा संध्या 04 बजे से आर्मी विवाह भवन दानापुर कैंट पटना के लिए प्रस्थान करेगी |</h5>
+         <center><h5 id="location" class="text-center"><span>नोट:- बारात मेरे निवास स्थान खानपुर पकरी से निजी वाहन द्वारा संध्या 04 बजे से आर्मी विवाह भवन दानापुर कैंट पटना के लिए प्रस्थान करेगी |</h5>
 
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3597.172123291635!2d85.03587061501831!3d25.632412283695576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39ed574cf872b38d%3A0x484b14413375961f!2sSainik%20rest%20house!5e0!3m2!1sen!2sin!4v1623603715942!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
